--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 #spring.mvc.view.prefix: /
 #spring.mvc.view.suffix: .jsp
+spring.thymeleaf.cache=false
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/userbase
+spring.datasource.url=jdbc:mysql://localhost:3306/lms
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
