--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jpa
+spring.datasource.url=jdbc:mysql://localhost:3306/userbase
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
