--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 #spring.mvc.view.prefix: /
 #spring.mvc.view.suffix: .jsp
-spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=false
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/userbase
-spring.datasource.username=benchfoundry
-spring.datasource.password=benchfoundry
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/userbase
+#spring.datasource.username=benchfoundry
+#spring.datasource.password=benchfoundry
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+
+#server.port=9000
+
+spring.datasource.platform=h2
+spring.datasource.jdbc-url=jdbc:h2:~/test
+##spring.datasource.data-username=sa
+##spring.datasource.data-password=""
